correcting nav spacing

--- a/src/index.css
+++ b/src/index.css
@@ -33,10 +33,6 @@ html {
   width: 100%;
 }
 
-/* #root {
-  min-width: 360px;
-} */
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -127,7 +123,7 @@ button:focus-visible {
 
 .header__nav {
   display: flex;
-  width: 100%;
+  min-width: 320px;
   flex-wrap: nowrap;
   justify-content: space-between;
 }
@@ -139,6 +135,7 @@ button:focus-visible {
 .page-container {
   display: grid;
   place-items: center;
+  min-width: 100%;
   min-height: 80vh;
 }
 
